fix: Change <a> to <Link> wrapped in a <div>

--- a/app/components/Contacts/Contacts.module.css
+++ b/app/components/Contacts/Contacts.module.css
@@ -7,6 +7,10 @@
   width: min(100%, 600px);
 }
 
+.link {
+  flex-grow: 1;
+}
+
 .comment {
   font-weight: var(--font-weight);
 }
