--- a/app/globals.css
+++ b/app/globals.css
@@ -84,11 +84,10 @@ h1 {
   left: 0;
   top: 0;
   opacity: 0;
-  pointer-events: none;
-  mix-blend-mode: difference;
   background-color: var(--dark-color);
-  transition: 0.3s ease-out, background-color 0.1s ease-in-out;
+  mix-blend-mode: difference;
   box-shadow: transparent;
+  transition: 0.3s ease-out, background-color 0.1s ease-in-out;
 }
 
 .box:hover::after {
